--- a/views/login.pug
+++ b/views/login.pug
@@ -7,3 +7,6 @@ block content
     label(for="password") Password
     input#password(type="password" name="password")
     button(type="submit") Log In
+  ul.errors
+    each err in sessionMessages
+      li= err
