--- a/views/signup.pug
+++ b/views/signup.pug
@@ -3,7 +3,12 @@ extends layout
 block content
   form(method="POST")
     label(for="username") Username
-    input#username(type="text", name="username")
+    input#username(type="text", name="username", value=user ? user.username: "")
     label(for="password") Password
     input#password(type="password" name="password")
     button(type="submit") Sign Up
+  ul.errors
+    if (errors)
+      each err in errors
+        li= err.msg
+
