--- a/styles/index.scss
+++ b/styles/index.scss
@@ -1,6 +1,10 @@
 :root {
   font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
     "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+
+  --colordark: #000505;
+  --colormedium: #bfcde0;
+  --colorlight: #fefcfd;
 }
 
 // Resets
@@ -20,12 +24,11 @@ body {
   flex-direction: column;
 
   margin: 0 auto;
-  width: min(1000px, 100%);
 }
 
 header {
-  background: #000505;
-  color: #fefcfd;
+  background: var(--colordark);
+  color: var(--colorlight);
 
   display: flex;
   justify-content: space-between;
@@ -40,7 +43,7 @@ header {
     font-size: 2rem;
 
     &:hover {
-      color: #bfcde0;
+      color: var(--colormedium);
     }
   }
 
@@ -57,12 +60,62 @@ header {
       color: #000050;
 
       &:hover {
-        background: #bfcde0;
+        background: var(--colormedium);
       }
     }
   }
 }
 
 main {
-  padding: 1rem 0.2rem;
+  width: min(1000px, calc(100% - 2rem));
+  padding: 2rem 0;
+  align-self: center;
+
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+
+  .inputs {
+    display: grid;
+    grid-template-columns: auto 1fr;
+    align-items: center;
+    row-gap: 0.5rem;
+    column-gap: 3rem;
+
+    input {
+      max-width: 400px;
+    }
+  }
+
+  button {
+    align-self: start;
+    padding: 0.5rem 2rem;
+    border: none;
+    background: var(--colordark);
+    color: var(--colorlight);
+    border-radius: 0.2rem;
+  }
+}
+
+ul.errors {
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 0.5rem;
+
+  li {
+    margin: 0.5rem 0;
+    padding: 0.25rem 1rem;
+    color: white;
+    background: rgb(221, 57, 57);
+    width: max-content;
+  }
 }
