--- a/views/login.pug
+++ b/views/login.pug
@@ -2,10 +2,11 @@ extends layout
 
 block content
   form(method="POST")
-    label(for="username") Username
-    input#username(type="text", name="username")
-    label(for="password") Password
-    input#password(type="password" name="password")
+    div.inputs
+      label(for="username") Username
+      input#username(type="text", name="username")
+      label(for="password") Password
+      input#password(type="password" name="password")
     button(type="submit") Log In
   ul.errors
     each err in sessionMessages
