--- a/views/signup.pug
+++ b/views/signup.pug
@@ -2,10 +2,17 @@ extends layout
 
 block content
   form(method="POST")
-    label(for="username") Username
-    input#username(type="text", name="username", value=user ? user.username: "")
-    label(for="password") Password
-    input#password(type="password" name="password")
+    div.inputs
+      label(for="firstName") First name
+      input#firstName(type="text", name="firstName", value=user ? user.firstName: "", autocomplete="given-name", autofocus= !user ? true : user.firstName ? false : true )
+      label(for="lastName") Last name
+      input#lastName(type="text", name="lastName" value=user ? user.lastName: "", autocomplete="family-name" autofocus= !user ? true : user.lastName ? false : true)
+      label(for="username") Username
+      input#username(type="text", name="username", value=user ? user.username: "", autofocus= !user ? true : user.username ? false : true)
+      label(for="password") Password
+      input#password(type="password" name="password" autofocus)
+      label(for="confirmPassword") Confirm password
+      input#confirmPassword(type="password" name="confirmPassword")
     button(type="submit") Sign Up
   ul.errors
     if (errors)
