--- a/views/signup.pug
+++ b/views/signup.pug
@@ -1,6 +1,7 @@
 extends layout
 
 block content
+  h1.header Sign up
   form(method="POST")
     div.inputs
       label(for="firstName") First name
