--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -53,6 +53,15 @@ header nav a {
 header nav a:hover {
   background: var(--colormedium);
 }
+header a.account {
+  background: none;
+  color: var(--colorlight);
+  text-decoration: underline;
+}
+header a.account:hover {
+  background: none;
+  color: var(--colormedium);
+}
 
 main {
   width: min(1000px, 100% - 2rem);
@@ -61,6 +70,10 @@ main {
   display: flex;
   flex-direction: column;
   gap: 1rem;
+}
+
+h1.header {
+  margin: 0;
 }
 
 form {
