--- a/views/layout.pug
+++ b/views/layout.pug
@@ -10,11 +10,10 @@ html(lang="en")
       a.title(href="/") Pssst
       nav
         if (currentUser)
+          a.account(href="/")= currentUser.username
           a(href="/logout") Logout
         else 
           a(href="/login") Login
           a(href="/signup") Sign up
     main
-      if (currentUser)
-        h2 Welcome #{currentUser.username}
       block content
