--- a/styles/index.scss
+++ b/styles/index.scss
@@ -85,10 +85,19 @@ main {
   display: flex;
   flex-direction: column;
   gap: 1rem;
+
+  h1,
+  h2,
+  h3 {
+    margin: 0.5rem 0;
+  }
 }
 
-h1.header {
-  margin: 0;
+.pass {
+  background: rgb(70, 70, 148);
+  color: var(--colorlight);
+  padding: 0.5rem 0.5rem;
+  width: max-content;
 }
 
 form {
