--- a/views/layout.pug
+++ b/views/layout.pug
@@ -10,7 +10,7 @@ html(lang="en")
       a.title(href="/") Pssst
       nav
         if (currentUser)
-          a.account(href="/")= currentUser.username
+          a.account(href="/account")= currentUser.username
           a(href="/logout") Logout
         else 
           a(href="/login") Login
