--- a/views/login.pug
+++ b/views/login.pug
@@ -5,7 +5,7 @@ block content
   form(method="POST")
     div.inputs
       label(for="username") Username
-      input#username(type="text", name="username")
+      input#username(type="text", name="username" autofocus)
       label(for="password") Password
       input#password(type="password" name="password")
     button(type="submit") Log In
