--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,27 @@
 :root {
   font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  font-size: 16px;
   --colordark: #000505;
+  --colordarkmed: #25466c;
+  --colordarkshadow: #0005052b;
+  --colordarkmedshadow: #0a101824;
   --colormedium: #bfcde0;
   --colorlight: #fefcfd;
+  color: var(--colordark);
+}
+
+.bold {
+  text-decoration: none;
+  font-weight: 700;
+}
+
+.capitalize {
+  text-transform: capitalize;
+}
+
+.underline {
+  text-decoration: none;
+  text-decoration: underline;
 }
 
 a,
@@ -77,13 +96,6 @@ main h3 {
   margin: 0.5rem 0;
 }
 
-.pass {
-  background: rgb(70, 70, 148);
-  color: var(--colorlight);
-  padding: 0.5rem 0.5rem;
-  width: max-content;
-}
-
 form {
   display: flex;
   flex-direction: column;
@@ -96,8 +108,13 @@ form .inputs {
   row-gap: 0.5rem;
   column-gap: 3rem;
 }
-form .inputs input {
+form .inputs input,
+form .inputs textarea {
   max-width: 400px;
+}
+form .inputs textarea {
+  resize: vertical;
+  min-height: 4ch;
 }
 form button {
   align-self: start;
@@ -106,6 +123,56 @@ form button {
   background: var(--colordark);
   color: var(--colorlight);
   border-radius: 0.2rem;
+}
+form button:hover {
+  background: var(--colormedium);
+  color: var(--colordark);
+}
+
+.formTypeButton {
+  align-self: start;
+  padding: 0.5rem 2rem;
+  border: none;
+  background: var(--colordark);
+  color: var(--colorlight);
+  border-radius: 0.2rem;
+  text-decoration: none;
+}
+.formTypeButton:hover {
+  background: var(--colormedium);
+  color: var(--colordark);
+}
+
+.commentsContainer {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+.commentsContainer .comment {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  gap: 1rem;
+  box-shadow: 0px 5px 20px var(--colordarkshadow);
+  border-radius: 0.2rem;
+  padding: 0.75rem 0.75rem;
+}
+.commentsContainer .comment h2,
+.commentsContainer .comment h3,
+.commentsContainer .comment p {
+  margin: 0;
+}
+.commentsContainer .comment h2 {
+  font-size: 1.1rem;
+}
+.commentsContainer .comment .spacedDetails {
+  display: flex;
+  justify-content: space-between;
+  gap: 1rem;
+  font-size: 0.85rem;
 }
 
 ul.errors {
@@ -121,6 +188,13 @@ ul.errors li {
   padding: 0.25rem 1rem;
   color: white;
   background: rgb(221, 57, 57);
+  width: max-content;
+}
+
+.pass {
+  background: rgb(70, 70, 148);
+  color: var(--colorlight);
+  padding: 0.5rem 0.5rem;
   width: max-content;
 }
 
