Make comments deletable by admins

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -7,6 +7,7 @@
   --colordarkmedshadow: #0a101824;
   --colormedium: #bfcde0;
   --colorlight: #fefcfd;
+  --colorred: rgb(221, 57, 57);
   color: var(--colordark);
 }
 
@@ -22,6 +23,13 @@
 .underline {
   text-decoration: none;
   text-decoration: underline;
+}
+
+.spacedBetween {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 1rem;
 }
 
 a,
@@ -127,6 +135,7 @@ form button {
 form button:hover {
   background: var(--colormedium);
   color: var(--colordark);
+  cursor: pointer;
 }
 
 .formTypeButton {
@@ -141,6 +150,7 @@ form button:hover {
 .formTypeButton:hover {
   background: var(--colormedium);
   color: var(--colordark);
+  cursor: pointer;
 }
 
 .commentsContainer {
@@ -156,6 +166,7 @@ form button:hover {
   flex-direction: column;
   justify-content: space-evenly;
   gap: 1rem;
+  background: var(--colorlight);
   box-shadow: 0px 5px 20px var(--colordarkshadow);
   border-radius: 0.2rem;
   padding: 0.75rem 0.75rem;
@@ -168,11 +179,18 @@ form button:hover {
 .commentsContainer .comment h2 {
   font-size: 1.1rem;
 }
-.commentsContainer .comment .spacedDetails {
-  display: flex;
-  justify-content: space-between;
-  gap: 1rem;
+.commentsContainer .comment .details {
   font-size: 0.85rem;
+}
+.commentsContainer .comment button.delete {
+  padding: 0.2rem 0.4rem;
+  font-size: 0.8rem;
+}
+.commentsContainer .comment .clicked {
+  background: var(--colorred);
+}
+.commentsContainer .comment .clicked:hover {
+  color: var(--colorlight);
 }
 
 ul.errors {
@@ -186,8 +204,8 @@ ul.errors {
 ul.errors li {
   margin: 0.5rem 0;
   padding: 0.25rem 1rem;
-  color: white;
-  background: rgb(221, 57, 57);
+  color: var(--colorlight);
+  background: var(--colorred);
   width: max-content;
 }
 
